fix: 테스크 편집 메서드 props 전달 오류 해결 및 gap 수정

--- a/taskify/src/public/css/index.css
+++ b/taskify/src/public/css/index.css
@@ -158,6 +158,13 @@ header {
   }
 }
 
+.task-input-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 0.8rem;
+}
+
 .task-edit-buttons {
   width: 100%;
   display: flex;
